<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.baidu.oped.aqueducts</groupId>
    <artifactId>storm-bolt-unit-testing-demo</artifactId>
    <packaging>jar</packaging>
    <version>1.0-SNAPSHOT</version>
    <name>storm-bolt-unit-testing-demo</name>
    <url>http://aqueducts.baidu.com</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12-beta-2</version>
            <scope>test</scope>
        </dependency>

        <!--kafka begin-->
        <dependency>
            <groupId>org.apache.kafka</groupId>
            <artifactId>kafka_2.9.2</artifactId>
            <version>0.8.1.1</version>
            <scope>compile</scope>
            <exclusions>
                <exclusion>
                    <artifactId>jmxri</artifactId>
                    <groupId>com.sun.jmx</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>jms</artifactId>
                    <groupId>javax.jms</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>jmxtools</artifactId>
                    <groupId>com.sun.jdmk</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <!--kafka end -->

        <dependency>
            <groupId>org.apache.storm</groupId>
            <artifactId>storm-core</artifactId>
            <version>0.9.2-incubating</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.apache.zookeeper</groupId>
            <artifactId>zookeeper</artifactId>
            <version>3.4.6</version>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-all</artifactId>
            <version>1.10.8</version>
        </dependency>
    </dependencies>

    <distributionManagement>
        <repository>
            <id>baidu_local</id>
            <name>Baidu Local Repository</name>
            <url>http://maven.scm.baidu.com:8081/nexus/content/repositories/Baidu_Local</url>
        </repository>
        <snapshotRepository>
            <id>baidu_local_snapshot</id>
            <name>Baidu Local Snapshot Repository</name>
            <url>http://maven.scm.baidu.com:8081/nexus/content/repositories/Baidu_Local_Snapshots</url>
        </snapshotRepository>
    </distributionManagement>

    <repositories>
        <repository>
            <id>repository.apache.org</id>
            <name>Apache Repo</name>
            <url>https://repository.apache.org/content/repositories/releases/</url>
        </repository>
        <repository>
            <id>clojars.org</id>
            <url>http://clojars.org/repo</url>
        </repository>
        <repository>
            <id>Nexus</id>
            <name>Nexus Public Repository</name>
            <url>http://maven.scm.baidu.com:8081/nexus/content/groups/public</url>
        </repository>
        <repository>
            <id>Nexus snapshots</id>
            <name>Nexus Public Repository</name>
            <url>http://maven.scm.baidu.com:8081/nexus/content/groups/public-snapshots</url>
        </repository>
    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <id>Nexus</id>
            <name>Nexus Public Repository</name>
            <url>http://maven.scm.baidu.com:8081/nexus/content/groups/public</url>
        </pluginRepository>
        <pluginRepository>
            <id>Nexus snapshots</id>
            <name>Nexus Public Repository</name>
            <url>http://maven.scm.baidu.com:8081/nexus/content/groups/public-snapshots</url>
        </pluginRepository>
    </pluginRepositories>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.4.3</version>
                <configuration>
                    <argLine>-XX:MaxPermSize=512m</argLine>
                    <forkMode>once</forkMode>
                    <forkedProcessTimeoutInSeconds>60</forkedProcessTimeoutInSeconds>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <source>1.7</source>
                    <target>1.7</target>
                    <compilerArgument>-Xlint:unchecked</compilerArgument>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>2.4</version>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
